<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>mementar</name>
  <version>0.0.4</version>
  <description>The mementar package</description>

  <maintainer email="guillaume.sarthou@laas.fr">srth</maintainer>

  <license>GNU LGPLv3</license>

  <url type="website">https://sarthou.github.io/mementar/</url>

  <author email="guillaume.sarthou@laas.fr">srth</author>

  <!-- ROS1 -->

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">cmake_modules</build_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 1">diagnostic_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">rospy</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <build_depend condition="$ROS_VERSION == 1">std_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">pluginlib</build_depend>
  <build_depend condition="$ROS_VERSION == 1">qtbase5-dev</build_depend>
  <build_depend condition="$ROS_VERSION == 1">rostest</build_depend>
  <build_depend condition="$ROS_VERSION == 1">ontologenius</build_depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">diagnostic_msgs</exec_depend>
  <!--exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend-->
  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">std_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">pluginlib</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">ontologenius</exec_depend>

  <!--export>
    <ontologenius plugin="${prefix}/reasoners_plugins.xml" />
  </export-->

  <!-- ROS2 -->

  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>

  <depend>ontologenius</depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ros2launch</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
